first pass, needs to be heavily altered

--- a/PMH/wr.html
+++ b/PMH/wr.html
@@ -8,6 +8,7 @@
 .portlet .col h3{display:block}
 .content{margin-left:1.231em}
 .head{overflow:hidden}
+.head h2{font-size:1em;color:#666}
 </style>
 </head>
 <body>
@@ -16,7 +17,7 @@
     <div class="col eight_col">
         <div class="content">
             <div class="head">
-                <div style="width:200px;height:200px;background-color:#ccc;float:left">Image</div>
+                <div style="width:200px;height:200px;margin:1em 1em 1em 0;background-color:#ccc;float:left">Image</div>
                 <h1>Abacavir (by mouth)</h1>
                 <h2>a-BAK-a-vir</h2>
                 <p>Treats human immunodeficiency virus (HIV) infection. HIV causes acquired immune deficiency syndrome (AIDS). This medicine does not cure HIV or AIDS, but combinations of drugs may slow the progress of the disease... <a href="#">Read more</a></p>
