--- a/PMH/hb.html
+++ b/PMH/hb.html
@@ -7,11 +7,46 @@
 <style>
 .content{margin-left:1.231em}
 .head{overflow:hidden}
+.head h2{font-size:1em;color:#666}
 .whatworks{border-radius:8px;border:1px solid #ccc;width:16em;float:left;padding:0;margin-right:1.2em}
 .whatworks .head{background-color:#ccc;height:120px}
 .whatworks .head:after{content:"Image"}
 .whatworks h2{color:white;background-image: -moz-linear-gradient(bottom, #85590C 0%, #CC8843 100%);padding:9px 0;padding-left:.9em;margin:0}
 .whatworks .body{padding:.9em}
+.alt-portlet{padding:1em;border:1px solid #bbb;border-radius:6px;overflow:hidden}
+.more_research{margin:2em 0;}
+.alt-portlet h2{color:#009;margin:.8em 0 .2em}
+.four_col{padding-left:2em;width:29%}
+
+
+.portlet.blue {
+border: 2px solid #f2eee5;
+box-shadow: 1px 1px 2px #ede7da;
+background: #fffbee;
+margin-top: 1.85em;
+margin-right: 2px;
+border-radius: 9px;
+}
+
+.portlet.blue>div {
+margin: 1em;
+}
+
+.portlet.blue .portlet_head {
+background: #5f8ece;
+padding: 0.6em 1em;
+margin: -1.65em 0.4em 0em 0.4em;
+border-radius: 7px;
+}
+
+.portlet.blue .portlet_head h3 {
+color: #fff;
+}
+
+.portlet.blue .portlet_shutter {
+top: 0.65em;
+right: 0.8em;
+}
 </style>
 </head>
 <body>
@@ -46,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="more_research">
+            <div class="more_research alt-portlet">
                 <h2>More research on what works</h2>
                 <div class="col six_col">
                     <h3>Latest reviews of evidence</h3>
@@ -79,8 +114,10 @@
         </div>
     </div>
     <div class="col four_col last">
-        <div class="portlet alt-portlet">
-            <h2>Things you need to know</h2>
+        <div class="portlet blue">
+            <div class="portlet_head">
+                <h3>Things you need to know</h3>
+            </div>
             <div class="body">
                 <div style="margin:0 auto;width:60px;height:50px;background-color:#ccc">Image</div>
                 <ul>
