--- a/PMH/hb.html
+++ b/PMH/hb.html
@@ -17,7 +17,7 @@
 .more_research{margin:2em 0;}
 .alt-portlet h2{color:#009;margin:.8em 0 .2em}
 .four_col{padding-left:2em;width:29%}
-
+dt{font-weight:bold}
 
 .portlet.blue {
 border: 2px solid #f2eee5;
