--- a/PMH/wr.html
+++ b/PMH/wr.html
@@ -9,6 +9,7 @@
 .content{margin-left:1.231em}
 .head{overflow:hidden}
 .head h2{font-size:1em;color:#666}
+dt{font-weight:bold}
 </style>
 </head>
 <body>
