--- a/PMH/hb.html
+++ b/PMH/hb.html
@@ -1,14 +1,17 @@
 <html>
 <head>
 <title></title>
+<script type="text/javascript" src="/core/jig/1.11.1/js/jig.min.js"></script>
 <link href="../css/standard_base_css.css" rel="stylesheet" type="text/css"/>
 <link href="../css/standard_grid_css.css" rel="stylesheet" type="text/css"/>
 <link href="../css/standard_portlet_css.css" rel="stylesheet" type="text/css"/>
 <style>
 .content{margin-left:1.231em}
 .head{overflow:hidden}
+.head h1{margin-bottom:.1em}
 .head h2{font-size:1em;color:#666}
-.whatworks{border-radius:8px;border:1px solid #ccc;width:16em;float:left;padding:0;margin-right:1.2em}
+.item{margin:0 1.5em 2em 18em}
+.whatworks{border-radius:8px;border:1px solid #ccc;width:16em;float:left;padding:0;margin:1em 1.5em 0 0}
 .whatworks .head{background-color:#ccc;height:120px}
 .whatworks .head:after{content:"Image"}
 .whatworks h2{color:white;background-image: -moz-linear-gradient(bottom, #85590C 0%, #CC8843 100%);padding:9px 0;padding-left:.9em;margin:0}
@@ -18,6 +21,8 @@
 .alt-portlet h2{color:#009;margin:.8em 0 .2em}
 .four_col{padding-left:2em;width:29%}
 dt{font-weight:bold}
+.pronounce{margin:.2em 0 1em}
+.item a.ui-ncbibutton{color:#fff !important}
 
 .portlet.blue {
 border: 2px solid #f2eee5;
@@ -67,10 +72,10 @@ right: 0.8em;
                
                 <div class="item">
                     <h1>Abatacept (Injection)</h1>
-                    <h2 class="pronounce">a-BAT-a-sept</h2>
+                    <h2 class="pronounce">a-BAK-a-vir</h2>
                     <p class="description">Treats moderate to severe rheumatoid arthritis for adults who have taken other medicines for RA. Also treats moderate to severe juvenile idiopathic arthritis in children 6 years of age and older... <a href="#">Read more</a></p>
                     <div class="buttons">
-                        <a href="#">Uses</a><a href="#">Side effects</a>
+                        <a href="#" class="jig-ncbibutton" data-jigconfig="'color':'copper'">Uses</a><a href="#" class="jig-ncbibutton" data-jigconfig="'color':'copper'">Side effects</a>
                     </div>
                     <dl>
                         <dt>Drug classes <a href="#" class="small">About this</a></dt>
