I think this is what they're asking for

--- a/PMH/hb.html
+++ b/PMH/hb.html
@@ -10,15 +10,21 @@
 .head{overflow:hidden}
 .head h1{margin-bottom:.1em}
 .head h2{font-size:1em;color:#666}
-.item{margin:0 1.5em 2em 18em}
+.item{margin:0 1.5em 2em 19em}
+.description{font-size:1.1538em}
 .whatworks{border-radius:8px;border:1px solid #ccc;width:16em;float:left;padding:0;margin:1em 1.5em 0 0}
-.whatworks .head{background-color:#ccc;height:120px}
+.whatworks .head{background-color:#ccc;height:120px;border-radius:8px 8px 0 0}
 .whatworks .head:after{content:"Image"}
-.whatworks h2{color:white;background-image: -moz-linear-gradient(bottom, #85590C 0%, #CC8843 100%);padding:9px 0;padding-left:.9em;margin:0}
+.whatworks h2{color:white;padding:9px 0;padding-left:.9em;margin:0;
+background-image: linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
+background-image: -o-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
+background-image: -moz-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
+background-image: -webkit-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
+background-image: -ms-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);}
 .whatworks .body{padding:.9em}
 .alt-portlet{padding:1em;border:1px solid #bbb;border-radius:6px;overflow:hidden}
 .more_research{margin:2em 0;}
-.alt-portlet h2{color:#009;margin:.8em 0 .2em}
+.alt-portlet h2{color:#009;margin:.8em 0 .4em;font-size:1.1538em}
 .four_col{padding-left:2em;width:29%}
 dt{font-weight:bold}
 .pronounce{margin:.2em 0 1em}
@@ -52,6 +58,7 @@ color: #fff;
 top: 0.65em;
 right: 0.8em;
 }
+.alt-portlet.portlet ul li,.blue.portlet ul li{border-bottom:0}
 </style>
 </head>
 <body>
@@ -72,7 +79,7 @@ right: 0.8em;
                
                 <div class="item">
                     <h1>Abatacept (Injection)</h1>
-                    <h2 class="pronounce">a-BAK-a-vir</h2>
+                    <h2 class="pronounce">a-BAT-a-sept</h2>
                     <p class="description">Treats moderate to severe rheumatoid arthritis for adults who have taken other medicines for RA. Also treats moderate to severe juvenile idiopathic arthritis in children 6 years of age and older... <a href="#">Read more</a></p>
                     <div class="buttons">
                         <a href="#" class="jig-ncbibutton" data-jigconfig="'color':'copper'">Uses</a><a href="#" class="jig-ncbibutton" data-jigconfig="'color':'copper'">Side effects</a>
