--- a/PMH/wr.html
+++ b/PMH/wr.html
@@ -12,15 +12,22 @@
 .head h1{margin-bottom:.1em}
 .head h2{font-size:1em;color:#666}
 dt{font-weight:bold}
-.item{margin:0 1.5em 2em 18em}
+.item{margin:0 1.5em 2em 19em}
 .pronounce{margin:.2em 0 1em}
+.description{font-size:1.1538em}
 .whatworks{border-radius:8px;border:1px solid #ccc;width:16em;float:left;padding:0;margin:1em 1.5em 0 0}
 .whatworks .head{background-color:#ccc;height:120px}
 .whatworks .head:after{content:"Image"}
-.whatworks h2{color:white;background-image: -moz-linear-gradient(bottom, #85590C 0%, #CC8843 100%);padding:9px 0;padding-left:.9em;margin:0}
+.whatworks h2{color:white;padding:9px 0;padding-left:.9em;margin:0;
+background-image: linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
+background-image: -o-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
+background-image: -moz-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
+background-image: -webkit-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
+background-image: -ms-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);}
 .whatworks .body{padding:.9em}
 
 .item a.ui-ncbibutton{color:#fff !important}
+.content .portlet{margin-top:2em}
 </style>
 </head>
 <body>
@@ -40,7 +47,7 @@ dt{font-weight:bold}
                 </div>
                 <div class="item">
                     <h1>Abatacept (Injection)</h1>
-                    <h2 class="pronounce">a-BAK-a-vir</h2>
+                    <h2 class="pronounce">a-BAT-a-sept</h2>
                     <p class="description">Treats moderate to severe rheumatoid arthritis for adults who have taken other medicines for RA. Also treats moderate to severe juvenile idiopathic arthritis in children 6 years of age and older... <a href="#">Read more</a></p>
                     <div class="buttons">
                         <a href="#" class="jig-ncbibutton" data-jigconfig="'color':'copper'">Uses</a><a href="#" class="jig-ncbibutton" data-jigconfig="'color':'copper'">Side effects</a>
