updated per crappy mockup

--- a/PMH/hb.html
+++ b/PMH/hb.html
@@ -15,7 +15,7 @@
 .whatworks{border-radius:8px;border:1px solid #ccc;width:16em;float:left;padding:0;margin:1em 1.5em 0 0}
 .whatworks .head{background-color:#ccc;height:120px;border-radius:8px 8px 0 0}
 .whatworks .head:after{content:"Image"}
-.whatworks h2{color:white;padding:9px 0;padding-left:.9em;margin:0;
+.whatworks h2{color:white;font-size:1.3846em;padding:9px 0;padding-left:.9em;margin:0;
 background-image: linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
 background-image: -o-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
 background-image: -moz-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
@@ -24,15 +24,17 @@ background-image: -ms-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67)
 .whatworks .body{padding:.9em}
 .alt-portlet{padding:1em;border:1px solid #bbb;border-radius:6px;overflow:hidden}
 .more_research{margin:2em 0;}
-.alt-portlet h2{color:#009;margin:.8em 0 .4em;font-size:1.1538em}
+.alt-portlet h2{color:#2f4a8b;margin:.8em 0 .4em;font-size:1.0769em}
+h1{color:#2f4a8b}
 .four_col{padding-left:2em;width:29%}
-dt{font-weight:bold}
+dt{font-weight:bold;font-size:1.2307em}
+.small{font-size:.6875em}
 .pronounce{margin:.2em 0 1em}
 .item a.ui-ncbibutton{color:#fff !important}
+.portlet_shadow{box-shadow:1px 1px 2px #EDE7DA}
 
 .portlet.blue {
 border: 2px solid #f2eee5;
-box-shadow: 1px 1px 2px #ede7da;
 background: #fffbee;
 margin-top: 1.85em;
 margin-right: 2px;
@@ -42,12 +44,13 @@ border-radius: 9px;
 .portlet.blue>div {
 margin: 1em;
 }
-
+.portlet.blue .body ul li{font-size:1.0769em}
 .portlet.blue .portlet_head {
 background: #5f8ece;
 padding: 0.6em 1em;
 margin: -1.65em 0.4em 0em 0.4em;
 border-radius: 7px;
+text-align:center
 }
 
 .portlet.blue .portlet_head h3 {
@@ -59,6 +62,30 @@ top: 0.65em;
 right: 0.8em;
 }
 .alt-portlet.portlet ul li,.blue.portlet ul li{border-bottom:0}
+
+.ui-widget-content .ui-ncbibutton-copper, .ui-widget-content .ui-ncbibutton-copper[disabled]:active, .ui-ncbibutton-copper, .ui-ncbibutton-copper[disabled]:active{
+background-image: linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%) !important;
+background-image: -o-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%) !important;
+background-image: -moz-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%) !important;
+background-image: -webkit-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%) !important;
+background-image: -ms-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%) !important;
+}
+.ui-button-text{font-size:1.0769em;font-weight:bold}
+.more_research h3{margin:1em 0 .3em}
+h2.moreresearch{font-size:1.3846em;margin:0}
+.more_research h4{margin:1em 0 .5em}
+.more_research h4 a{font-size:1.0769em;font-weight:normal;text-decoration:none}
+.more_research p a{text-decoration:none}
+.more_research .all{margin-top:2em}
+
+.brand_names{border-top:1px dotted #ccc;}
+.brand_names h2{padding-bottom:4px;border-bottom:2px solid #97b1c9}
+.brand_names p{font-size:1.0769em;color:#59331f}
+
+.alt-portlet .portlet_content{margin-top:17px;font-size:.9230em}
+.learn_about .portlet_con1ent a{color:#14376c}
+.learn_about .portlet_content p{margin-left:7em}
+.learn_about .image{width:75px;height:100px;float:left}
 </style>
 </head>
 <body>
@@ -67,11 +94,11 @@ right: 0.8em;
     <div class="col eight_col">
         <div class="content">
             <div class="head">
-                <div class="whatworks">
+                <div class="whatworks portlet_shadow">
                     <div class="head">
 
                     </div>
-                    <h2>What Works</h2>
+                    <h2>What works?</h2>
                     <div class="body">
                         <p>This summary of a Cochrane review presents what we know from research about the effects of abatacept on rheumatoid arthritis... <a href="#">Read more</a></p>
                     </div>
@@ -94,7 +121,7 @@ right: 0.8em;
             </div>
 
             <div class="more_research alt-portlet">
-                <h2>More research on what works</h2>
+                <h2 class="moreresearch">More research on what works</h2>
                 <div class="col six_col">
                     <h3>Latest reviews of evidence</h3>
                     <h4><a href="#">Title of the article</a></h4>
@@ -104,7 +131,7 @@ right: 0.8em;
                     <h4><a href="#">Title of the article</a></h4>
                     <p>Couple sentence summary of article to give the user a feel for what the content is to decide if it is what they want.</p>
                     
-                    <p><a href="#">See all</a></p>
+                    <p class="all"><a href="#">See all (#)</a></p>
                 </div>
                 <div class="col six_col last">
                     <h3>Summaries for consumers</h3>
@@ -116,17 +143,17 @@ right: 0.8em;
                     <h4><a href="#">Title of the article</a></h4>
                     <p>Couple sentence summary of article to give the user a feel for what the content is to decide if it is what they want.</p>
 
-                    <p><a href="#">See all</a></p>
+                    <p class="all"><a href="#">See all (#)</a></p>
                 </div>
             </div>
             <div class="brand_names">
-                <h2>Brand names</h2>
+                <h2 class="h3">Brand names</h2>
                 <p>Provided by <a href="#">RxNorm</a>, a list of names for clinical drugs produced by the National Library of Medicine</p>
             </div>
         </div>
     </div>
     <div class="col four_col last">
-        <div class="portlet blue">
+        <div class="portlet blue portlet_shadow">
             <div class="portlet_head">
                 <h3>Things you need to know</h3>
             </div>
@@ -139,7 +166,7 @@ right: 0.8em;
                 </ul>
             </div>
         </div>
-        <div class="portlet alt-portlet">
+        <div class="portlet learn_about alt-portlet">
             <h2>Learn about...</h2>
             <div class="portlet_content">
                 <div class="image"><a class="img_link" href="#" style="width:75px;height:100px;background-color:#ccc">Image</a></div>
