update for the PMH buttons

--- a/PMH/hb.html
+++ b/PMH/hb.html
@@ -16,11 +16,12 @@
 .whatworks .head{background-color:#ccc;height:120px;border-radius:8px 8px 0 0}
 .whatworks .head:after{content:"Image"}
 .whatworks h2{color:white;font-size:1.3846em;padding:9px 0;padding-left:.9em;margin:0;
-background-image: linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
-background-image: -o-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
-background-image: -moz-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
-background-image: -webkit-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);
-background-image: -ms-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%);}
+background-image: linear-gradient(bottom, rgb(171,92,23) 0%, rgb(198,106,26) 100%);
+background-image: -o-linear-gradient(bottom, rgb(171,92,23) 0%, rgb(198,106,26) 100%);
+background-image: -moz-linear-gradient(bottom, rgb(171,92,23) 0%, rgb(198,106,26) 100%);
+background-image: -webkit-linear-gradient(bottom, rgb(171,92,23) 0%, rgb(198,106,26) 100%);
+background-image: -ms-linear-gradient(bottom, rgb(171,92,23) 0%, rgb(198,106,26) 100%);
+}
 .whatworks .body{padding:.9em}
 .alt-portlet{padding:1em;border:1px solid #bbb;border-radius:6px;overflow:hidden}
 .more_research{margin:2em 0;}
@@ -64,13 +65,15 @@ right: 0.8em;
 .alt-portlet.portlet ul li,.blue.portlet ul li{border-bottom:0}
 
 .ui-widget-content .ui-ncbibutton-copper, .ui-widget-content .ui-ncbibutton-copper[disabled]:active, .ui-ncbibutton-copper, .ui-ncbibutton-copper[disabled]:active{
-background-image: linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%) !important;
-background-image: -o-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%) !important;
-background-image: -moz-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%) !important;
-background-image: -webkit-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%) !important;
-background-image: -ms-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%) !important;
+background-image: linear-gradient(bottom, rgb(171,92,23) 0%, rgb(198,106,26) 100%);
+background-image: -o-linear-gradient(bottom, rgb(171,92,23) 0%, rgb(198,106,26) 100%);
+background-image: -moz-linear-gradient(bottom, rgb(171,92,23) 0%, rgb(198,106,26) 100%);
+background-image: -webkit-linear-gradient(bottom, rgb(171,92,23) 0%, rgb(198,106,26) 100%);
+background-image: -ms-linear-gradient(bottom, rgb(171,92,23) 0%, rgb(198,106,26) 100%);
+letter-spacing:.5px
 }
 .ui-button-text{font-size:1.0769em;font-weight:bold}
+.buttons a{margin-right:.3em}
 .more_research h3{margin:1em 0 .3em}
 h2.moreresearch{font-size:1.3846em;margin:0}
 .more_research h4{margin:1em 0 .5em}
@@ -86,6 +89,7 @@ h2.moreresearch{font-size:1.3846em;margin:0}
 .learn_about .portlet_con1ent a{color:#14376c}
 .learn_about .portlet_content p{margin-left:7em}
 .learn_about .image{width:75px;height:100px;float:left}
+.learn_about p a{color:#14376C;text-decoration:none}
 </style>
 </head>
 <body>
