second version added

--- a/PMH/wr.html
+++ b/PMH/wr.html
@@ -30,6 +30,8 @@ dl dd{margin:0 0 .7em 0;padding:0;}
 .portlet_shadow{box-shadow:1px 1px 2px #EDE7DA}
 
 
+.buttons{margin:1em 0}
+.buttons a{margin-right:.3em}
 .ui-widget-content .ui-ncbibutton-copper, .ui-widget-content .ui-ncbibutton-copper[disabled]:active, .ui-ncbibutton-copper, .ui-ncbibutton-copper[disabled]:active{
 background-image: linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%) !important;
 background-image: -o-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67) 100%) !important;
@@ -70,7 +72,8 @@ background-image: -ms-linear-gradient(bottom, rgb(133,89,12) 0%, rgb(204,136,67)
                 <div class="item">
                     <h1>Abatacept (Injection)</h1>
                     <h2 class="pronounce">a-BAT-a-sept</h2>
-                    <p class="description">Treats moderate to severe rheumatoid arthritis for adults who have taken other medicines for RA. Also treats moderate to severe juvenile idiopathic arthritis in children 6 years of age and older... <a href="#">Read more</a></p>
+                    <p class="description">Treats moderate to severe rheumatoid arthritis for adults who have taken other medicines for RA. Also treats moderate to severe juvenile idiopathic arthritis in children 6 years of age and older.</p>
+                    <p class="description">Abatacept injection is used alone or together with other medicines to reduce the signs and symptoms of moderate to severe rheumatoid arthritis. Abatacept helps keep joint damage from getting worse after other medicines have been used and did not work well... <a href="#">Read more</a></p>
                     <div class="buttons">
                         <a href="#" class="jig-ncbibutton" data-jigconfig="'color':'copper'">Uses</a><a href="#" class="jig-ncbibutton" data-jigconfig="'color':'copper'">Side effects</a>
                     </div>
