--- a/PMH/hbv2.html
+++ b/PMH/hbv2.html
@@ -6,15 +6,16 @@
 <link href="../css/standard_grid_css.css" rel="stylesheet" type="text/css"/>
 <link href="../css/standard_portlet_css.css" rel="stylesheet" type="text/css"/>
 <style>
-.content{margin-left:1.231em}
+.content{/*margin-left:1.231em*/margin-left:1.75em}
 .head{overflow:hidden}
-.head h1{margin-bottom:.1em;margin-top:.7222em}
+.head h1{margin-bottom:0;margin-top:.7222em}
 .head h2{font-size:1em;color:#666}
 .item{margin:0 1.5em 2em 19em}
-.description{font-size:1.1538em}
-.whatworks{border-radius:8px;border:1px solid #ccc;width:16em;float:left;padding:0;margin:1em 1.5em 0 0}
-.whatworks .head{background-color:#ccc;height:120px;border-radius:8px 8px 0 0}
-.whatworks .head:after{content:"Image"}
+.description,.summary{font-size:1.1538em}
+.description{margin-top:1.5em}
+h3.summary{font-size:1.1538em;line-height:inherit;margin-right:.5em;color:#555;font-weight:normal}
+.whatworks{border-radius:8px;border:1px solid #ccc;width:16em;float:left;padding:0;margin:7.15em 1.5em 0 0}
+.whatworks .head{height:120px;border-radius:8px 8px 0 0;background:transparent url('/portal/portal3rc.fcgi/3582239/img/3593876') no-repeat scroll center top;}
 .whatworks h2{color:white;font-size:1.3846em;padding:9px 0;padding-left:.9em;margin:0;
 background-image: linear-gradient(bottom, rgb(171,92,23) 0%, rgb(198,106,26) 100%);
 background-image: -o-linear-gradient(bottom, rgb(171,92,23) 0%, rgb(198,106,26) 100%);
@@ -23,15 +24,16 @@ background-image: -webkit-linear-gradient(bottom, rgb(171,92,23) 0%, rgb(198,106
 background-image: -ms-linear-gradient(bottom, rgb(171,92,23) 0%, rgb(198,106,26) 100%);
 }
 .whatworks .body{padding:.9em}
-.alt-portlet{padding:1em;border:1px solid #bbb;border-radius:6px;overflow:hidden}
+.alt-portlet{padding:1em;border:1px solid #e8e8e8;border-radius:9px;overflow:hidden}
 .more_research{margin:2em 0;}
 .alt-portlet h2{color:#2f4a8b;margin:.8em 0 .4em;font-size:1.0769em}
-h1{color:#2f4a8b}
+h1{color:#2f4a8b;font-size:1.8461em}
 .four_col{padding-left:2em;width:29%}
-dt{font-weight:bold;font-size:1.2307em}
+dl{margin-top:1.5em}
+dt{font-weight:bold;font-size:1.0769em}
 dl dd{margin:0 0 .7em 0;padding:0;}
 .small{font-size:.6875em}
-.pronounce{margin:.2em 0 1em}
+.pronounce{margin:0 0 1.5em}
 .item a.ui-ncbibutton{color:#fff !important}
 .portlet_shadow{box-shadow:1px 1px 2px #EDE7DA}
 
@@ -75,7 +77,7 @@ letter-spacing:.5px
 }
 .ui-button-text{font-size:1.0769em;font-weight:bold}
 .buttons{margin:1em 0}
-.buttons a{margin-right:.3em}
+.buttons a{font-size:1.1538em;margin-right:1.5em;color:#ab5c17;font-weight:bold}
 .more_research h3{margin:1em 0 .3em}
 h2.moreresearch{font-size:1.3846em;margin:0}
 .more_research h4{margin:1em 0 .5em}
@@ -113,16 +115,19 @@ h2.moreresearch{font-size:1.3846em;margin:0}
                 <div class="item">
                     <h1>Abatacept (Injection)</h1>
                     <h2 class="pronounce">a-BAT-a-sept</h2>
-                    <p class="description"><strong>Treats moderate to severe rheumatoid arthritis for adults who have taken other medicines for RA. Also treats moderate to severe juvenile idiopathic arthritis in children 6 years of age and older.</strong></p>
-                    <p class="description">Abatacept injection is used alone or together with other medicines to reduce the signs and symptoms of moderate to severe rheumatoid arthritis. Abatacept helps keep joint damage from getting worse after other medicines have been used and did not work well... <a href="#">Read more</a></p>
+                    <h3 class="inline summary">Summary:</h3>
+                    <p class="summary">Treats moderate to severe rheumatoid arthritis for adults who have taken other medicines for RA. Also treats moderate to severe juvenile idiopathic arthritis in children 6 years of age and older.</p>
                     <div class="buttons">
-                        <a href="#" class="jig-ncbibutton" data-jigconfig="'color':'copper'">Uses</a><a href="#" class="jig-ncbibutton" data-jigconfig="'color':'copper'">Side effects</a>
+                        <a href="#">Uses</a><a href="#">Side effects</a>
                     </div>
+                    <p class="description">Abatacept injection is used alone or together with other medicines to reduce the signs and symptoms of moderate to severe rheumatoid arthritis. Abatacept helps keep joint damage from getting worse after other medicines have been used and did not work well... <a href="#">Read more</a></p>
                     <dl>
                         <dt>Drug classes <a href="#" class="small">About this</a></dt>
                         <dd>Immune modulator, <a href="#">Selective T cell costimulation modulator</a></dd>
                         <dt>Brand names</dt>
                         <dd>Orencia</dd>
+                        <dt>Other forms</dt>
+                        <dd><a href="#">On the skin</a>, <a href="#">By breathing</a>, <a href="#">Into the nose</a></dd>
                     </dl>
                 </div>
             </div>
