two small changes from the meeting today

--- a/PMH/hbv24.html
+++ b/PMH/hbv24.html
@@ -1,4 +1,6 @@
-<html>
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title></title>
 <script type="text/javascript" src="/core/jig/1.11.1/js/jig.min.js"></script>
@@ -185,7 +187,7 @@ background-image: -webkit-gradient(
                         <dt>Other forms</dt>
                         <dd><a href="#">On the skin</a>, <a href="#">By breathing</a>, <a href="#">Into the nose</a></dd>
                         <dt>Drug classes <a href="#" class="small">About this</a></dt>
-                        <dd>Immune modulator, <a href="#">Selective T cell costimulation modulator</a></dd>
+                        <dd>Immune modulator, Selective T cell costimulation modulator</dd>
                     </dl>
                 </div>
             </div>
