--- a/PMH/hbv3.html
+++ b/PMH/hbv3.html
@@ -1,4 +1,6 @@
-<html>
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title></title>
 <script type="text/javascript" src="/core/jig/1.11.1/js/jig.min.js"></script>
@@ -26,7 +28,7 @@ body{margin:0}
 .whatworks > a:hover{background-color:#eee}
 .whatworks a p{color:#2f4a8b}
 .whatworks .head{height:120px;border-radius:9px 9px 0 0;display:block}
-.whatworks h2{color:#fff;font-size:1.3846em;padding:6px 0;padding-left:.9em;margin:0;background-color:#5f8ece
+.whatworks h2{color:#fff;font-size:1.3846em;padding:6px 0;padding-left:.9em;margin:0;background-color:#5f8ece;
 background-image: linear-gradient(bottom, rgb(51,102,153) 0%, rgb(95,141,206) 100%);
 background-image: -o-linear-gradient(bottom, rgb(51,102,153) 0%, rgb(95,141,206) 100%);
 background-image: -moz-linear-gradient(bottom, rgb(51,102,153) 0%, rgb(95,141,206) 100%);
@@ -190,6 +192,7 @@ dl{margin-left:18em}
                             </p>
                             <ul>
                                 <li>Mometasone and Formoterol</li>
+                                <li><a href="#">another combination</a></li>
                             </ul>
                         </dd>
                         <dt>Into the nose</dt>
