moved more research titles closer to body text

--- a/PMH/hbv24.html
+++ b/PMH/hbv24.html
@@ -49,6 +49,7 @@ background-image: -webkit-gradient(
 .whatworks .body p a:hover{color:#985735}
 .alt-portlet{padding:1em;border:1px solid #e8e8e8;border-radius:9px;overflow:hidden}
 .more_research{margin:2.5em 1em 0 0}
+.more_research p{margin-top:.2em}
 .alt-portlet h2{color:#2f4a8b;margin:.8em 0 .4em;font-size:1.0769em}
 h1{color:#2f4a8b;font-size:1.8461em}
 .four_col{padding-left:2em;width:29%}
@@ -94,7 +95,7 @@ right: 0.8em;
 .links a:hover{text-decoration:underline}
 .more_research h3{margin:1em 0 .3em}
 h2.moreresearch{font-size:1.3846em;margin:0}
-.more_research h4{margin:1em 0 .5em}
+.more_research h4{margin:1em 0 .2em}
 .more_research h4 a{font-size:1.0769em;font-weight:normal;text-decoration:none}
 .more_research p a{text-decoration:none}
 .more_research .all{margin-top:2em}
